force-app/main/default/objects/Family__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Contact Name of the Family Member. This will be selected via Lookup.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Family Members</relationshipLabel>
    <relationshipName>Families</relationshipName>
    <type>Lookup</type>
</CustomField>