force-app/main/default/objects/Family__c/fields/Relationship__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <inlineHelpText>This person&apos;s relationship to the account holder. How is he connected as a family member to the main contact. Select one from the picklist.</inlineHelpText>
    <label>Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Biological Mother</fullName>
            </value>
            <value>
                <fullName>Biological Father</fullName>
            </value>
            <value>
                <fullName>Sister</fullName>
            </value>
            <value>
                <fullName>Brother</fullName>
            </value>
            <value>
                <fullName>Son</fullName>
            </value>
            <value>
                <fullName>Daughter</fullName>
            </value>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Step Father</fullName>
            </value>
            <value>
                <fullName>Step Mother</fullName>
            </value>
            <value>
                <fullName>Step Sister</fullName>
            </value>
            <value>
                <fullName>Step Brother</fullName>
            </value>
            <value>
                <fullName>Step Son</fullName>
            </value>
            <value>
                <fullName>Step Daughter</fullName>
            </value>
            <value>
                <fullName>Life Partner</fullName>
            </value>
            <value>
                <fullName>Life Partner 1</fullName>
            </value>
            <value>
                <fullName>Life Partner 2</fullName>
            </value>
            <value>
                <fullName>Life Partner 3</fullName>
            </value>
            <value>
                <fullName>Life Partner 4</fullName>
            </value>
            <value>
                <fullName>Paternal Grandfather</fullName>
            </value>
            <value>
                <fullName>Paternal Grandmother</fullName>
            </value>
            <value>
                <fullName>Maternal Grandfather</fullName>
            </value>
            <value>
                <fullName>Maternal Grandmother</fullName>
            </value>
            <value>
                <fullName>Grandfather</fullName>
            </value>
            <value>
                <fullName>Grandmother</fullName>
            </value>
            <value>
                <fullName>Uncle</fullName>
            </value>
            <value>
                <fullName>Aunt</fullName>
            </value>
            <value>
                <fullName>Paternal Uncle</fullName>
            </value>
            <value>
                <fullName>Paternal Aunt</fullName>
            </value>
            <value>
                <fullName>Maternal Uncle</fullName>
            </value>
            <value>
                <fullName>Maternal Aunt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>