force-app/main/default/objects/Family__c/fields/Relationship_to__c.field-meta.xml
<CustomField>
    <fullName>Relationship_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Relationship to of the Family Member. Select Name of the Family member by Lookup.</inlineHelpText>
    <label>Relationship to</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Families (Relationship to)</relationshipLabel>
    <relationshipName>Families1</relationshipName>
    <type>Lookup</type>
</CustomField>