force-app/main/default/objects/Family__c/fields/Significance__c.field-meta.xml
<CustomField>
    <fullName>Significance__c</fullName>
    <label>Significance</label>
    <type>TextArea</type>
</CustomField>